[static.layout] Fix stretched avatars due to flexboxes.

--- a/src/static/layout/html/page.inc.less
+++ b/src/static/layout/html/page.inc.less
@@ -798,6 +798,7 @@ strong {
 
   .panel-header {
     display: flex;
+    align-items: flex-start;
     padding: 4px;
 
     & > * {
