--- a/src/static/layout/html/yn-board-topic.inc.less
+++ b/src/static/layout/html/yn-board-topic.inc.less
@@ -95,6 +95,7 @@
 
       .bottom {
         display: flex;
+        align-items: flex-start;
         padding: 4px 0 0 0;
         margin: 4px 0 0 0;
         border-color: @post-border;
